Fixed for non CHPP users

--- a/lang/de-de.json
+++ b/lang/de-de.json
@@ -3,6 +3,7 @@
    "validateLang": "de",
    "flag": "de",
    "lang-name": "Deutsch",
+   "COUNTRY_ID": "3",
    "TRANSLATED_BY": "<b>cl_lime</b> (8795775)",
 
    "QUOTE": "Bei der Kondition gibt es Sachen, die man nicht erklären kann. Für alles andere gibt es <b>Stamin.IA!</b>",
