--- a/lang/es-es.json
+++ b/lang/es-es.json
@@ -3,6 +3,7 @@
   "validateLang": "es",
   "flag": "es",
   "lang-name": "Español",
+  "COUNTRY_ID": "35",
   "TRANSLATED_BY": "<b>panitinho</b> (6225560)",
 
   "Error": "",
