--- a/lang/it-it.json
+++ b/lang/it-it.json
@@ -3,6 +3,7 @@
   "validateLang": "it",
   "flag": "it",
   "lang-name": "Italiano",
+  "COUNTRY_ID": "4",
   "TRANSLATED_BY": "<b>Lizardopoli</b> (5246225) e <b>LudovR</b> (9878845)",
 
   "Error": "Errore",
@@ -103,6 +104,7 @@
   "Min": "",
   "Max": "",
   "Total": "Totale",
+  "Country": "Nazione",
 
   "Calculate": "Calcola",
   "Switch players": "Inverti giocatori",
