--- a/lang/pt-pt.json
+++ b/lang/pt-pt.json
@@ -3,6 +3,7 @@
   "validateLang": "ptpt",
   "flag": "pt",
   "lang-name": "Português (Portugal)",
+  "COUNTRY_ID": "23",
   "TRANSLATED_BY": "<b>bigs_</b> (5775947)",
 
   "Error": "Erro",
