--- a/lang/fr-fr.json
+++ b/lang/fr-fr.json
@@ -3,6 +3,7 @@
    "validateLang": "fr",
    "flag": "fr",
    "lang-name": "Français",
+   "COUNTRY_ID": "5",
    "TRANSLATED_BY": "<b>mcourpot</b> (9571012)",
 
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
