--- a/lang/hu-hu.json
+++ b/lang/hu-hu.json
@@ -3,6 +3,7 @@
   "validateLang": "hu",
   "flag": "hu",
   "lang-name": "Magyar",
+  "COUNTRY_ID": "44",
   "TRANSLATED_BY": "<b>dzsoo</b> (9668661)",
 
   "Error": "Hiba",
