--- a/lang/sv-se.json
+++ b/lang/sv-se.json
@@ -3,6 +3,7 @@
    "validateLang": "se",
    "flag": "se",   
    "lang-name": "Svenska",
+   "COUNTRY_ID": "1",
    "TRANSLATED_BY": "<b>Izozimo</b> (1325602)",
 
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
