Improved translations Added keeper minimum and maximum components Improved main skill calculation Fixed total column height

--- a/lang/el-gr.json
+++ b/lang/el-gr.json
@@ -9,9 +9,9 @@
    "QUOTE": "Υπάρχουν κάποια πράγματα για την Αντοχή, που δεν μπορούμε να εξηγήσουμε. Για όλα τα υπόλοιπα, υπάρχει το <b>Stamin.IA</b>!",
 
    "TITLE": "Καλωσήρθατε στο Stamin.IA!",
-   "SUBTITLE": "Το πρώτο εργαλείο για τον υπολογισμό των αλλαγών κατά τη διάρκεια των αγώνων στο Hattrick",
+   "SUBTITLE": "The Hattrick's salary assistant",
    "SHORT_HELP": "Συμπληρώστε τα πεδία και το Stamin.IA! θα υπολογίσει σε ποιο λεπτό θα πρέπει να προγραμματίσετε την αλλαγή μεταξύ <b>%s</b> και <b>%s</b> ώστε να επωφεληθείτε το μέγιστο.",
-   "LONG_HELP": "Αυτός ο οδηγός παρέχει λεπτομερή πληροφόρηση για το Stamin.IA!.<br/><br/><b>Η Δυναμική Παίκτη</b> που χρησιμοποιείται σε αυτό το εργαλείο δε σχετίζεται με τα επιπεδα και υπο-επίπεδα Ικανοτήτων του Hattrick: Χρησιμεύει μόνο σαν μονάδα μέτρησης της χρησιμότητας του παίκτη<br/><br/>Ο <b>Σύνθετος Υπολογισμός της Δυναμικής</b> πρέπει να χρησιμοποιείται όταν περισσότερες Ικανότητες από μια λαμβάνονται υπόψη για να καθοριστεί η συνολική συνεισφορά ενός παίκτη. Για παράδειγμα, για ένα Τερματοφύλακα, η συνεισφορά του στην άμυνα καθορίζεται από αμφότερες τις ικανότητές του \"Τέρμα\" και \"Άμυνα\". Από την άλλη, για να αξιολογηθεί μόνο η συνεισφορά ενός Μέσου στο Κέντρο, η ο Σύνθετος Υπολογισμός δεν είναι απαραίτητος, ή μπορεί να υπολογιστεί μδενίζοντας όλες τις Ικανότητες εκτός της Οργάνωσης.<br/><br/>Αφού συμπληρώσετε τη φόρμα, πιέστε <b>Υπολογισμός</b>.<br/><br/>Το αποτέλεσμα θα δείξει τη σωστή στιγμή (ένα συγκεκριμένο λεπτό ή εύρος λεπτών) κατά την οποία πρέπει να γίνει μια αλλαγή, ώστε να επιτευχθεί η μέγιστη συνεισφορά των δυο παικτών στην ομάδα.<br/><br/>Το γράφημα της <b>Συνολικής Συνεισφοράς</b> δείχνει τη <i>συνεισφορά</i> του κάθε παίκτη στην ομάδα εάν η αλλαγή γίνει σε ένα δεδομένο <i>λεπτό</i>.<br/><br/>Το γράφημα της <b>Μερικής Συνεισφοράς</b> δείχνει την ατομική <i>συνεισφορά</i> των παικτών στην ομάδα, όταν ο πρώτος παίκτης αντικαθίσταται από τον δεύτερο σε ένα δεδομένο <i>λεπτό</i>. <br/><br/>Με μια πρώτη ματιά, οι δυο παίκτες ίσως δείχνουν αταίριαστοι ή ακόμα και εντελώς διαφορετικοί. Για να εξηγήσουμε πώς συνδέονται μεταξύ τους, ας θεωρήσουμε ότι μια αλλαγή γίνεται στο 10ο λεπτό του πρώτου ημιχρόνου. Από το γράφημα \"Μερικής Συνεισφοράς\" ας σημειώσουμε τη συνεισφορά του πρώτου παίκτη, που βγαίνει από τον αγωνιστικό χώρο στο 9ο λεπτό (δε συμμετέχει στον υπολογισμό για το 10ο λεπτό), και του δεύτερου παίκτη που παίρνει τη θέση του στο 10ο λεπτό. Έτσι, ο πρώτος παίκτης έχει συνεισφέρει στην ομάδα του κατά 9/90 (10%) και ο δεύτερος παίκτης κατά 81/90 (90%). Προσθέτοντας το 10% της συνεισφοράς του πρώτου παίκτη και το 90% του δεύτερου παίκτη, συμπληρώνεται το γράφημα της τιμής της \"Συνολικής Συνεισφοράς\" για το 10ο λεπτό.<br/><br/>Ενεργοποιώντας την επιλογή <b>Πρεσσάρισμα</b>, το Stamin.IA! θα λάβει υπόψη την αρνητική επίδραση της Τακτικής \"Πρεσσάρισμα\" στην Αντοχή των παικτών.<br/><br/>Ο <b>Πίνακας Συνεισφοράς</b> (εμφανίζεται μόνο αν η επιλογή είναι ενεργοποιημένη) περιλαμβάνει όλες τις λεπτομέρειες του υπολογισμού. Δεδομένου του λεπτού στο οποίο γίνεται η αλλαγή, εμφανίζονται πληροφορίες όπως η συνολική συνεισφορά των παικτών, το ποσοστό της απόδοσής τους σε σχέση με το μέγιστο, η ατομική συνεισφορά και:<br/><ul><li><b>MIN</b>: Ελάχιστη συνεισφορά</li><li><b>MAX</b>: Μέγιστη Συνεισφορά</li><li><b>~ 1%</b>: Διαφορά μικρότερη από 1% μεταξύ της μέγιστης συμπεριφοράς (χρήσιμη για να οριστεί η αλλαγή λίγο πριν/μετά αν σκοπός είναι να δοθεί περισσότερη εμπειρία σε παίκτες ή για να αποφευχθούν τραυματισμοί, χωρίς μεγάλες απώλειες από άποψη συνεισφοράς)</li><li><b>Π1 Πρόβλημα Αντοχής &darr;</b>: Αν ο Παίκτης 1 συνεχίσει να παίζει ως αυτό το λεπτό ή αργότερα, υπάρχει πιθανότητα να προκαλέσει αρνητικό Ειδκό Γεγονός εξαιτίας της χαμηλής αντοχής του.</li><li><b>Π2 Πρόβλημα Αντοχής &uarr;</b>:  Αν ο Παίκτης 2 μπει στον αγώνα κατά το λεπτό αυτό ή νωρίτερα, υπάρχει πιθανότητα να προκαλέσει αρνητικό Ειδκό Γεγονός εξαιτίας της χαμηλής αντοχής του.</li></ul><b>ΣΗΜΕΙΩΣΗ</b>: Το Stamin.IA! δε λαμβάνει υπόψη τραυματισμούς. Πρέπει να θεωρείται προφανές ότι ο κίνδυνος τραυματισμού είναι άμεσα ανάλογος των λεπτών που ένας παίκτης παραμένει στον αγώνα και είναι επίσης προφανές ότι οι τραυματισμοί δεν είναι δυνατό να προβλεφθούν.<br/>",
+   "LONG_HELP": "",
  
    "Close": "",
    "Help": "Βοήθειας",
@@ -102,13 +102,13 @@
    "Forward (Def+Tec)": "Επιθετικός (Τεχνικός Αμυντικά) - TDF",
    "Forward (TW)": "Επιθετικός (Προς το Πλάι) - Ftw",
 
-   "Keeper (skill)": "Τέρμα",
-   "Defending (skill)": "Άμυνα",
-   "Playmaking (skill)": "Οργάνωση",
-   "Winger (skill)": "Πλάγια",
-   "Passing (skill)": "Πάσα",
-   "Scoring (skill)": "Σκοράρισμα",
-   "Set Pieces (skill)": "Στημένα",
+   "KeeperSkill": "Τέρμα",
+   "DefenderSkill": "Άμυνα",
+   "PlaymakerSkill": "Οργάνωση",
+   "WingerSkill": "Πλάγια",
+   "PassingSkill": "Πάσα",
+   "ScorerSkill": "Σκοράρισμα",
+   "SetPiecesSkill": "Στημένα",
 
    "Click \"%s\" to get results": "Πάτα \"%s\" για να δεις τα αποτελέσματα",
 
