--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -53,13 +53,13 @@
   "Mother club bonus": "",
 
   "Skill": "",
-  "Keeper (skill)": "Keeper",
-  "Defending (skill)": "Defending",
-  "Playmaking (skill)": "Playmaking",
-  "Winger (skill)": "Winger",
-  "Passing (skill)": "Passing",
-  "Scoring (skill)": "Scoring",
-  "Set Pieces (skill)": "Set Pieces",
+  "KeeperSkill": "Keeper",
+  "DefenderSkill": "Defending",
+  "PlaymakerSkill": "Playmaking",
+  "WingerSkill": "Winger",
+  "PassingSkill": "Passing",
+  "ScorerSkill": "Scoring",
+  "SetPiecesSkill": "Set Pieces",
   "non-existent": "",
   "disastrous": "",
   "wretched": "",
