--- a/lang/it-it.json
+++ b/lang/it-it.json
@@ -53,13 +53,13 @@
   "Mother club bonus": "Bonus Squadra Madre",
 
   "Skill": "Abilità",
-  "Keeper (skill)": "Parate",
-  "Defending (skill)": "Difesa",
-  "Playmaking (skill)": "Regia",
-  "Winger (skill)": "Cross",
-  "Passing (skill)": "Passaggi",
-  "Scoring (skill)": "Attacco",
-  "Set Pieces (skill)": "Calci piazzati",
+  "KeeperSkill": "Parate",
+  "DefenderSkill": "Difesa",
+  "PlaymakerSkill": "Regia",
+  "WingerSkill": "Cross",
+  "PassingSkill": "Passaggi",
+  "ScorerSkill": "Attacco",
+  "SetPiecesSkill": "Calci piazzati",
   "non-existent": "inesistente",
   "disastrous": "disastroso",
   "wretched": "tremendo",
