--- a/lang/pt-pt.json
+++ b/lang/pt-pt.json
@@ -12,9 +12,9 @@
   "QUOTE": "Há coisas sobre resistência (<i>stamina</i>) que não podemos explicar. Para tudo o resto, há o <b>Stamin.IA!</b>",
 
   "TITLE": "Bem-vindo ao Stamin.IA!",
-  "SUBTITLE": "A primeira ferramenta do Hattrick para calcular substituições",
+  "SUBTITLE": "The Hattrick's salary assistant",
   "SHORT_HELP": "Por favor preencha o formulário e o Stamin.IA! irá calcular o minuto em que deve planear a substituição entre o <b>%s</b> e o <b>%s</b> por forma a obter a contribuição máxima.",
-  "LONG_HELP": "<p>Este guia fornece informações detalhadas sobre o Stamin.IA!.</p><p>A <strong>Força do jogador</strong> usada por esta ferramenta não está relacionada com os níveis e sub-níveis das características usados no Hattrick: serve apenas como uma medida para resumir a utilidade do jogador com um único valor.</p><p>O <strong>cálculo avançado da força</strong> deve ser usado quando mais de uma característica deve ser tida em consideração para determinar a contribuição em campo de um jogador; por exemplo para um guarda-redes, cuja contribuição para a defesa é dada tanto pela sua característica de guarda-redes como de defesa. Por outro lado, se se pretender avaliar apenas a contribuição para o meio campo de um médio, o cálculo avançado da força não é necessário ou pode ser usado ao zerar todas as contribuições, exceto a de criatividade.</p><p>Depois de preencher o formulário, clique em <strong>Calcular</strong>.</p><p>O resultado irá indicar o momento certo (um determinado minuto ou um intervalo de minutos) no qual a substituição deve ser feita, por forma a obter a contribuição máxima para a sua equipa de ambos os jogadores.</p><p>O gráfico da <strong>Contribuição Total</strong> mostra a <em>contribuição</em> dada pelos jogadores a alinhar se a substituição é feita num determinado <em>minuto</em>.</p><p>O gráfico da <strong>Contribuição Parcial</strong> mostra a <em>contribuição</em> individual dada pelos jogadores a alinhar, quando o primeiro jogador é trocado pelo segundo num determinado <em>minuto</em>.</p><p>À primeira vista, os dois gráficos podem parecer não-relacionados ou até contraditórios. Para explicar como estão relacionados um com o outro, vamos considerar uma substituição feita no 10.º minuto da primeira parte. A partir do gráfico da \"Contribuição Parcial\" anote-se a contribuição do primeiro jogador, que deixa o campo no 9.º minuto (ele não contribui para o cálculo da contribuição do 10.º minuto), e do segundo jogador que entra em campo no 10.º minuto. Portanto, o primeiro jogador contribuiu para a equipa por 9/90 (10%) e o segundo jogador por 81/90 (90%). Ao somar os 10% da contribuição do primeiro jogador e os 90% da do segundo jogador, o valor do gráfico da \"Contribuição Total\" é obtido para o 10.º minuto.</p><p>Ao ativar a opção do <strong>Pressing</strong>, o Stamin.IA! irá ter em consideração o impacto negativo dado tática de pressing na resistência do jogador.</p><p>A <strong>Tabela de Contribuições</strong> (apenas mostrada se a respetiva opção estiver ativada) inclui todos os detalhes do cálculo. Dado o minuto no qual a substituição é efetuada, são mostradas informações tais como a contribuição total do jogador, a percentagem do seu desempenho comparada com o máximo, a contribuição individual, entre outras:</p><ul><li><b>MIN</b>: Contribuição mínima</li><li><b>MAX</b>: Contribuição máxima</li><li><b>~ 1%</b>: Menos de 1% de diferença para a contribuição máxima (útil para definir a substituição um pouco antes ou depois se quiser dar mais experiência aos jogadores ou se tem medo de lesões, sem perder demasiado no que toca à contribuição)</li><li><b>J1 baixa resistência &darr;</b>: Se o Jogador 1 continuar a jogar no ou depois deste minuto, ele tem uma hipótese de sofrer um evento especial negativo de baixa resistência causado pela sua baixa resistência</li><li><b>J2 baixa resistência &uarr;</b>: Se o Jogador 2 começar a jogar no ou antes deste minuto, ele tem uma hipótese de sofrer um evento especial negativo de baixa resistência causado pela sua baixa resistência</li></ul><p>O Stamin.IA! não tem em consideração as lesões. Deve ser óbvio que o risco de lesões é diretamente proporcional ao número de minutos que um jogador permanecer em campo e é óbvio, também, que as lesões não são previsíveis.</p><p>Pode estimar os sub-níveis de resistência ao usar a função fornecida no separador <a href=\"#\" id=\"extraLink\"><i class=\"icon-plus-sign\"></i> Extra</a></p>",
+  "LONG_HELP": "",
 
   "CHPP": "CHPP",
   "Authorize Stamin.IA! to access your data": "Autorizar o Stamin.IA! a aceder aos seus dados",
@@ -57,13 +57,13 @@
   "Mother club bonus": "Bónus do clube de origem",
 
   "Skill": "Característica",
-  "Keeper (skill)": "Guarda-Redes",
-  "Defending (skill)": "Defesa",
-  "Playmaking (skill)": "Criatividade",
-  "Winger (skill)": "Ala",
-  "Passing (skill)": "Assistências",
-  "Scoring (skill)": "Finalização",
-  "Set Pieces (skill)": "Bolas Paradas",
+  "KeeperSkill": "Guarda-Redes",
+  "DefenderSkill": "Defesa",
+  "PlaymakerSkill": "Criatividade",
+  "WingerSkill": "Ala",
+  "PassingSkill": "Assistências",
+  "ScorerSkill": "Finalização",
+  "SetPiecesSkill": "Bolas Paradas",
   "non-existent": "inexistente",
   "disastrous": "desastroso",
   "wretched": "terrível",
