--- a/lang/ru-ru.json
+++ b/lang/ru-ru.json
@@ -9,9 +9,9 @@
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
    
    "TITLE" : "Добро пожаловать в Stamin.IA!",
-   "SUBTITLE" : "Первый калькулятор для расчета оптимального времени замен в Hattrick",
+   "SUBTITLE": "The Hattrick's salary assistant",
    "SHORT_HELP" : "Пожалуйста, заполните имеющиеся поля предлагаемой формы и Stamin.IA! расcчитает, на какой минуте Вы должны произвести замену игроков <b>%s</b> на <b>%s</b> для обеспечения их максимального вклада.",
-   "LONG_HELP" : "<div class=\"alert alert-block alert-error fade in\"><a href=\"#\" data-dismiss=\"alert\" class=\"close\">&times;</a><h4 class=\"alert-heading\">This guide is not updated</h4></div>Использовать данный калькулятор очень просто: заполните необходимые поля предлагаемой формы для первого игрока <b>Игрок 1</b> (игрок, который выйдет в стартовой расстановке, т.е. начнет матч) и второго игрока <b>Игрок 2</b> (игрок, который войдет в игру позже, т.е. заменит первого игрока).<br/><br/><b>Расширенный расчет</b> обеспечивает более точные результаты прогнозирования за счет использования в расчетах значений всех навыков используемого игрока в зависимости от его положения на поле. Использование Расширенной версии необходимо при наличии в команде мультискиловых игроков (т.н. мультиков).<br/><br/>После заполнения необходимых полей предлагаемой формы нажмите на кнопку <b>Рассчитать</b>.<br/><br/>При этом Вам сразу будет предоставлено точное время проведение замены (либо временной интервал), при котором замена первого игрока на второго обеспечит максимальный вклад обоих игроков в игру Вашей команды.<br/><br/>В таблице, расположенной под результатами расчетов (предоставляемой только при включении соответствующей опции), Вы найдете все детали проведенных вычислений: вклад каждого из игроков (в процентах) для каждой минуты матча, их индивидуальный вклад и т.д.<br><br/><ul><li><b>MIN</b>: Минимальный вклад</li><li><b>MAX</b>: Максимальный вклад</li><li><b>~ 1%</b>: Менее 1% разницы в максимальном вкладе игроков (полезно при проведении замены несколько ранее либо позднее рассчетного времени с целью получения игроком большего опыта либо при опасении получения игроком травмы)</li><li><b>Игрок1 Низкая выносливость &darr;</b>: Если первый игрок будет играть на этой минуте (или после нее), он имеет шанс получить отрицательное специальное событие, связанное с усталостью.</li><li><b>Игрок2 Низкая выносливость &uarr;</b>: Если второй игрок войдет в игру на этой минуте (или до нее), он имеет шанс получить отрицательное специальное событие, связанное с усталостью.</li></ul><b>Замечание</b>: Stamin.IA! не учитывает травмы. Очевидно, что вероятность получения игроком травмы прямо пропорциональна времени, проведенному им на поле. Кроме того, при использовании в расcчетах значения выносливости, не учитывается возможное использование тактики прессинга.<br/>",
+   "LONG_HELP" : "",
 
    "Close": "",
    "Help" : "Помощь",
@@ -104,12 +104,12 @@
    "Forward (Def+Tec)" : "Нападающий (техничный оборонительный)",
    "Forward (TW)" : "Нападающий (смещенный к флангу)",
    
-   "Keeper (skill)" : "Вратарь",
-   "Defending (skill)" : "Защита",
-   "Playmaking (skill)" : "Полузащита",
-   "Winger (skill)" : "Фланг",
-   "Passing (skill)" : "Пас",
-   "Scoring (skill)" : "Нападение",
+   "KeeperSkill" : "Вратарь",
+   "DefenderSkill" : "Защита",
+   "PlaymakerSkill" : "Полузащита",
+   "WingerSkill" : "Фланг",
+   "PassingSkill" : "Пас",
+   "ScorerSkill" : "Нападение",
    
    "Click \"%s\" to get results" : "Нажмите \"%s\" для получения результатов",
    
