--- a/lang/es-es.json
+++ b/lang/es-es.json
@@ -12,9 +12,9 @@
   "QUOTE": "Hay cosas sobre la resistencia que no se pueden explicar. Para todo lo demás tienes <b>Stamin.IA!</b>",
 
   "TITLE": "Bienvenido en Stamin.IA!",
-  "SUBTITLE": "La primera herramienta para calcular las sustituciones en Hattrick",
+  "SUBTITLE": "The Hattrick's salary assistant",
   "SHORT_HELP": "Rellena el formulario y Stamin.IA! calculará en que minuto es mejor planificar la sustitución entre <b>%s</b> y <b>%s</b> para obtener la máxima contribución.",
-  "LONG_HELP": "En esta guía se analizarán al detalle los aspectos más importantes de Stamin.IA!.<br/><br/>La <b>fuerza de los jugadores</b> a la que se refiere el tool no está relacionada con los niveles y subniveles de Hattrick: sólo es un indicador nacido de la necesidad de resumir en un solo número la utilidad de un jugador.<br/><br/>El <b>Cálculo avanzado de la fuerza</b> se utiliza cuando hace falta considerar más habilidad para determinar lo que un jugador aporta, por ejemplo para un portero, cuya contribución a los valores defensivo viene de las habilidades de portería y defensa. Si, en cambio, queremos estimar exclusivamente el aporte al medio de un inner es suficiente utilizar la modalidad simple o poner a cero las habilidades diferentes de jugadas en modalidad avanzada.<br/><br/>Despuésde haber insertado los datos que se han pedido hay que hacer click en <b>Calcula</b>.<br/><br/>El resultado se mostrará en el marco debajo del módulo y señalará el minuto (o el intervalo de minutos) en los que, planificando la sostitución, los jugadores darán la máxima contribución al equipo.<br/><br/>El gráfico <b>Aporte Total</b> señala la <i>contribución</i> que dan los jugadores al equipo si se hace efectiva la sostitución en el <i>minuto</i> sugerido.<br/><br/>Por otro lado, el gráfico <b>Aportes Parciales</b>, señala la <i>contribución</i> individual que dan los jugadores al equipo, en el caso el titular abandone el campo y el suplente coja el relevo en el <i>minuto</i> indicado.<br/><br/>A simple vista puede parecer que entre los dos gráficos no haya relación alguna, si no que se contradigan. Para explicar su correlación podemos hipotizar una sostitución en el minuto 10 de la primera parte. Desde el gráfico \"Apportes Parciales\" anotamos la contribución del titular que abandona el campo en el minuto 9 (sin así participar en el cálculo de las valoraciones del minuto 10) y del suplente que entra en el minuto 10. El titular ha así contribuido al equipo en 9/90 (10%) y el suplente en 81/90 (90%). Haciendo la suma, entre el 10% del aporte del titular y el 90% del suplente, obtenemos el valor del gráfico \"Aporte Total\" en correspondencia del minuto 10.<br/><br/>Abilitando la opción <b>Pressing</b>, el tool tendrá en cuenta el impacto negativo que dicha táctica tiene sobre la resistencia de los jugadores.<br/><br/>La <b>Tabla de las contribuciones</b> (visualizada sólo si la correspondiente opción está abilitada) incluye todos los detalles del cálculo: hipotizando el cambio a cada minuto del partido, encontramos la contribución total de los jugadores, el porcentaje de su rendimiento comparado con el máximo, sus aportes individuales y eventuales otras anotaciones:<br/><ul><li><b>MIN</b>: Contribución mínima</li><li><b>MAX</b>: Contribución máxima</li><li><b>~ 1%</b>: Diferencia de rendimiento inferior al 1% respecto al máximo (útil, por ejemplo, para establecer la sustitución un poco antes/después si queremos dar más experiencia a los jugadores o si tememos lesiones de los mismos sin perdr demasiado en el aporte al equipo)</li><li><b>Titular resistencia baja &darr;</b>: Minuto desde el que el titular, si no sale del campo, se arriesga a un eveneto especial negativo debido a la resistencia </li><li><b>Suplente resistencia baja &uarr;</b>: Minuto hasta el que el suplente, entrando al campo, se arriesga a un evento especial negativo dovuto alla resistenza</li></ul>Stamin.IA! no tiene en cuenta las lesiones que puedan acontecer. &Egrave; es lógico que cuanto más los jugadores se quedan en el campo más se arriesgan a lesionarse como, por otro lado, es también lógico que este aspecto del juego no se pueda predecir.<br/>",
+  "LONG_HELP": "",
 
   "CHPP": "",
   "Authorize Stamin.IA! to access your data": "Autoriza Stamin.IA! para acceder a tus datos",
@@ -57,13 +57,13 @@
   "Mother club bonus": "Bonus Cantera",
 
   "Skill": "Habilidad",
-  "Keeper (skill)": "Porteria",
-  "Defending (skill)": "Defensa",
-  "Playmaking (skill)": "Jugadas",
-  "Winger (skill)": "Lateral",
-  "Passing (skill)": "Pases",
-  "Scoring (skill)": "Anotación",
-  "Set Pieces (skill)": "Balon Parado",
+  "KeeperSkill": "Porteria",
+  "DefenderSkill": "Defensa",
+  "PlaymakerSkill": "Jugadas",
+  "WingerSkill": "Lateral",
+  "PassingSkill": "Pases",
+  "ScorerSkill": "Anotación",
+  "SetPiecesSkill": "Balon Parado",
   "non-existent": "",
   "disastrous": "desastroso",
   "wretched": "horrible",
