--- a/lang/hu-hu.json
+++ b/lang/hu-hu.json
@@ -12,9 +12,9 @@
   "QUOTE": "Vannak dolgok az erőnléttel kapcsolatban, amelyeket nem tudunk megmagyarázni. Minden másra itt a <b>Stamin.IA!</b>.",
 
   "TITLE": "Üdvözöllek a Stamin.IA oldalán!",
-  "SUBTITLE": "A Hattrick első cserekalkulátora",
+  "SUBTITLE": "The Hattrick's salary assistant",
   "SHORT_HELP": "Töltsd ki az űrlapot és a Stamin.IA! kiszámítja, hogy melyik percre érdemes cserét tervezned <b>%s</b> és <b>%s</b> között, hogy mindketten maximálisan járuljanak hozzá az értékeléseidhez.",
-  "LONG_HELP": "<p>Ez az útmutató részletes információt nyújt a Stamin.IA! használatáról.Az eszköz által használt </p><p><strong>játékos erősség</strong> nincs kapcsolatban a Hattrick képességszintjeivel és alszintjeivel: mindössze arra szolgál, hogy összefoglaljuk a játékos hasznosságát egyetlen mérőszámmal.</p><p>A <strong>bővített erősség számítást</strong> akkor kell használnunk, ha egynél több képességet veszünk figyelembe, a játékos pontosabb mezőnyhozzájárulásának kiszámítása érdekében; például egy kapus esetében, aki a védelemhez a védés és védekezés képességével is hozzájárul. Másrészről, ha valaki egy középpályás középpálya hozzájárulását akarja csak becsülni, a bővített erősség számításra nincs szüksége, vagy a játékszervezésen kívül minden más képességet ki kell nulláznia.</p><p>Az űrlap kitöltése után kattints a <strong>Számol</strong> gombra.</p><p>Az eredmény megmutatja azt a bizonyos percet (egy adott percet, vagy intervallumot), amikor a cserét el kell végezdned annak érdekében, hogy mindkettő játékos maximálisan járuljon hozzá a csapatod teljesítményéhez.</p><p>A <strong>Teljes Hozzájárulás</strong> grafikonon látható az adott játékos <em>csapathozzájárulása</em>, abban az esetben ha a megadott <em>percben</em> végrehajtásra került a csere.</p><p>A <strong>Részleges Hozzájárulás</strong> grafikon az adott játékos egyéni <em>hozzájárulását</em> mutatja meg, ha az első játékost lecserélte a második a megadott <em>percben</em>.</p><p>Első pillantásra a két grafikon nem tűnik összefüggőnek, sőt akár ellentmondásosnak is. Magyarázatként nézzünk meg egy példát a kapcsolatra arra az esetre, ha az első félidő 10. percében hajtunk végre cserét. A \"Részleges Hozzájárulás\" grafikon írja le az első játékos hozzájárulásást, ahogy a 9. percben elhagyja a pályát (tehát a 10. perc hozzájárulás számításában nem vesz részt), valamint a 2. játékosét, aki a 10. percben pályára lép.  Így az 1. játékos 9/90 (10%) részben, a 2. játékos 81/90 (90%) részben járult hozzá a csapat teljesítményéhez. Összessítve az 1. játékos 10% és a 2. játékos 90%-os hozzájárulását a \"Teljes Hozzájárulás\" grafikon mutatja meg a 10. percre (is).</p><p>A <strong>Játéktördelés</strong> opció engedélyezésével, a Stamin.IA! figyelembe veszi a játékosoknál a játéktördelés taktika erőnlétre gyakorolt negatív hatását.</p><p>A <strong>Hozzájárulás-táblázatban</strong> (csak akkor látható, ha az opció engedélyezve van) láthatod az összes számítási részletet. Az adott percet, amikor a csere végrehajtásra került, olyan információk, mint a játékosok teljes hozzájárulása, a maximumhoz viszonyított teljesítményük százalékosan, az egyszerűsített hozzájárulásuk és mások:</p><ul><li><b>MIN</b>: Minimális hozzájárulás</li><li><b>MAX</b>: Maximális hozzájárulás</li><li><b>~ 1%</b>: Kevesebb, mint 1% különbség a maximális hozzájáruláshoz képest (hasznos lehet egy picit korábbi/későbbi csere beállításakor, ha több tapasztalatot akarsz adni a játékosnak, vagy éppen tartasz egy sérüléstől, anélkül hogy túl sokat vesztenél a hozzájárulásból)</li><li><b>J1 rossz erőnlét &darr;</b>: Ha az 1. játékost ezután is a pályán tartod, esélye van, hogy alacsony erőnlét miatti negatív eseményt szenvedjen el</li><li><b>J2 rossz erőnlét &uarr;</b>: Ha a 2. játékos ebben, vagy ezelőtt a perc előtt kezd el játszani, akkor esélye van alacsony erőnlét miatti negatív eseményt kapnia</li></ul><p>A Stamin.IA! nem veszi figyelembe a sérüléseket. Nyilvánvaló, hogy a sérülés kockázata egyenesen arányos a pályán töltött idővel és az is nyilvánvaló, hogy a sérülés előre meg nem jósolható.</p><p>Megbecsülheted az erőnlét töredékszintjét az <a href=\"#\" id=\"extraLink\"><i class=\"icon-plus-sign\"></i> Extra</a> fülön található eszközzel.</p>",
+  "LONG_HELP": "",
 
   "CHPP": "CHPP",
   "Authorize Stamin.IA! to access your data": "Engedélyezd a Stamin.IA!-nak, hogy hozzáférhessen az adataidhoz",
@@ -57,13 +57,13 @@
   "Mother club bonus": "Anyaegyesületi bónusz",
 
   "Skill": "Képesség",
-  "Keeper (skill)": "Védés",
-  "Defending (skill)": "Védekezés",
-  "Playmaking (skill)": "Játékszervezés",
-  "Winger (skill)": "Szélsőjáték",
-  "Passing (skill)": "Átadás",
-  "Scoring (skill)": "Gólszerzés",
-  "Set Pieces (skill)": "Pontrúgás",
+  "KeeperSkill": "Védés",
+  "DefenderSkill": "Védekezés",
+  "PlaymakerSkill": "Játékszervezés",
+  "WingerSkill": "Szélsőjáték",
+  "PassingSkill": "Átadás",
+  "ScorerSkill": "Gólszerzés",
+  "SetPiecesSkill": "Pontrúgás",
   "non-existent": "nem létező",
   "disastrous": "katasztrófális",
   "wretched": "pocsék",
