--- a/lang/tr-tr.json
+++ b/lang/tr-tr.json
@@ -9,9 +9,9 @@
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
 
    "TITLE": "Stamin.IA!'ya hoşgeldiniz.",
-   "SUBTITLE": "Hattrick'in ilk oyuncu değişikliği hesaplayıcısı",
+   "SUBTITLE": "The Hattrick's salary assistant",
    "SHORT_HELP": "Lütfen formu doldurun, Stamin.IA! hangi dakikada <b>%s</b> ve <b>%s</b> arasındaki değişiklikten maksimum verim alacağınızı hesaplayıp gösterecektir.",
-   "LONG_HELP": "<div class=\"alert alert-block alert-error fade in\"><a href=\"#\" data-dismiss=\"alert\" class=\"close\">&times;</a><h4 class=\"alert-heading\">This guide is not updated</h4></div>Program kullanımı oldukça basit: <b>1.oyuncu</b>nun (İlk 11'de oynayan oyuncunuz) ve <b>2.oyuncu</b>nun (Oyuna sonradan 1.oyuncunun yerine giren oyuncunuz) özelliklerini forma giriniz.<br/><br/> <b>Gelişmiş Mod</b> Gelişmiş modda daha kesin sonuçlar bulunur; çünkü oyuncuların bütün özelliklerini bulundukları mevkiye göre inceler. Gelişmiş mod multiskill oyuncular içindir.<br/><br/>Formu doldurduktan sonra, <b>Hesapla</b> tuşuna basınız.<br/><br/>Sonuç, değişiklikten en yüksek verimi alacağınız dakika veya dakika aralıklarını gösterecektir.<br/><br/>Sonuçların altındaki tabloda (ki bu tablo sadece belli seçeneklerde görülebilir) bütün hesaplama detaylarını görebilirsiniz: maçın her dakikası için, oyuncuların toplam katkısı yüzdeli olarak gösterilir, ayrıca oyuncuların katkıları gibi diğer detaylar da görülebilir.<br/><ul><li><b>MIN</b>: Minimum Katkı</li><li><b>MAX</b>: Maksimum Katkı</li><li><b>~ 1%</b>: Maksimum verimle arada %1’den daha az bir fark varsa (değişikliği biraz erken veya geç yapmak da yararlı olabilir eğer oyunculara daha çok tecrübe kazandırmak istiyorsanız ya da sakatlıktan korkuyorsanız da az bir kayıpla maksimum katkıyı elde edebilirsiniz)</li><li><b>O1 düşük kondisyon &darr;</b>: Eğer 1.oyuncu bu dakikaya kadar veya daha sonrasında oynamaya devam ederse kondisyon düşüklüğünden dolayı rakibe atak şansı yaratabilir</li><li><b>O2 düşük kondisyon &uarr;</b>: Eğer 2.oyuncu bu dakikada veya daha öncesinde oynamaya devam ederse kondisyon düşüklüğünden dolayı rakibe atak şansı yaratabilir </li></ul><b>NOT</b>: Stamin.IA! sakatlık durumunu incelemez. Sakatlık riski ile oyuncunun sahada kaldığı süre arasında bir doğru orantı olduğu açıktır ve sakatlıkların tahmin edilemeyeceği de bir diğer su götürmez gerçektir. Ayrıca, Staminia pres taktiğini de incelemez (pres taktiğinin oyuncuların kondisyonu üzerinde etkisi vardır).<br/>",
+   "LONG_HELP": "",
 
    "Close": "",
    "Help": "Yardım",
@@ -104,12 +104,12 @@
    "Forward (Def+Tec)": "Teknik Defansif Forvet",
    "Forward (TW)": "Kanada Doğru Forvet",
 
-   "Keeper (skill)": "Kalecilik",
-   "Defending (skill)": "Defans",
-   "Playmaking (skill)": "Oyunkuruculuk",
-   "Winger (skill)": "Kanat",
-   "Passing (skill)": "Pas",
-   "Scoring (skill)": "Golcülük",
+   "KeeperSkill": "Kalecilik",
+   "DefenderSkill": "Defans",
+   "PlaymakerSkill": "Oyunkuruculuk",
+   "WingerSkill": "Kanat",
+   "PassingSkill": "Pas",
+   "ScorerSkill": "Golcülük",
 
    "Click \"%s\" to get results": "Sonuç için \"%s\"e basınız",
 
