Fixed currency detection

--- a/lang/el-gr.json
+++ b/lang/el-gr.json
@@ -3,7 +3,7 @@
    "validateLang": "el",
    "flag": "gr",
    "lang-name": "Ελληνικά",
-   "COUNTRY_ID": "45",
+   "LEAGUE_ID": "50",
    "TRANSLATED_BY": "<b>tsaloo</b> (9530688)",
    
    "QUOTE": "Υπάρχουν κάποια πράγματα για την Αντοχή, που δεν μπορούμε να εξηγήσουμε. Για όλα τα υπόλοιπα, υπάρχει το <b>Stamin.IA</b>!",
