--- a/lang/es-ca.json
+++ b/lang/es-ca.json
@@ -3,7 +3,7 @@
   "validateLang": "es",
   "flag": "mx",
   "lang-name": "Español Centroamericano",
-  "COUNTRY_ID": "6",
+  "LEAGUE_ID": "6",
   "TRANSLATED_BY": "<b>Baler0</b> (335181)",
 
   "Error": "",
