--- a/lang/es-es.json
+++ b/lang/es-es.json
@@ -3,7 +3,7 @@
   "validateLang": "es",
   "flag": "es",
   "lang-name": "Español",
-  "COUNTRY_ID": "35",
+  "LEAGUE_ID": "36",
   "TRANSLATED_BY": "<b>panitinho</b> (6225560)",
 
   "Error": "",
