--- a/lang/it-it.json
+++ b/lang/it-it.json
@@ -3,7 +3,7 @@
   "validateLang": "it",
   "flag": "it",
   "lang-name": "Italiano",
-  "COUNTRY_ID": "4",
+  "LEAGUE_ID": "4",
   "TRANSLATED_BY": "<b>Lizardopoli</b> (5246225) e <b>LudovR</b> (9878845)",
 
   "Error": "Errore",
