--- a/lang/nb-no.json
+++ b/lang/nb-no.json
@@ -3,7 +3,7 @@
    "validateLang": "no",
    "flag": "no",   
    "lang-name": "Norsk",
-   "COUNTRY_ID": "9",
+   "LEAGUE_ID": "9",
    "TRANSLATED_BY": "<b>LA-Heggland</b> (695472)",
 
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
