--- a/lang/nl-be.json
+++ b/lang/nl-be.json
@@ -3,7 +3,7 @@
    "validateLang": "nl",
    "flag": "be",
    "lang-name": "Vlaams",
-   "COUNTRY_ID": "38",
+   "LEAGUE_ID": "44",
    "TRANSLATED_BY": "<b>Dockseven</b> (809784)",
 
    "QUOTE": "Er zijn zaken over uithouding die niemand kan uitleggen. Voor al de rest kan je op <b>Stamin.IA!</b> rekenen",
