--- a/lang/nl-nl.json
+++ b/lang/nl-nl.json
@@ -3,7 +3,7 @@
    "validateLang": "nl",
    "flag": "nl",
    "lang-name": "Nederlands",
-   "COUNTRY_ID": "12",
+   "LEAGUE_ID": "14",
    "TRANSLATED_BY": "<b>Dockseven</b> (809784)",
 
    "QUOTE": "Er zijn zaken over uithouding die niemand kan uitleggen. Voor al de rest kan je op <b>Stamin.IA!</b> rekenen",
