--- a/lang/tr-tr.json
+++ b/lang/tr-tr.json
@@ -3,7 +3,7 @@
    "validateLang": "tr",
    "flag": "tr",   
    "lang-name": "Türkçe",
-   "COUNTRY_ID": "31",
+   "LEAGUE_ID": "32",
    "TRANSLATED_BY": "<b>FB-Utku</b> (5081202)",
 
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
