--- a/lang/ru-ru.json
+++ b/lang/ru-ru.json
@@ -3,7 +3,7 @@
    "validateLang": "ru",
    "flag": "ru",   
    "lang-name" : "Русский",
-   "COUNTRY_ID": "34",
+   "LEAGUE_ID": "35",
    "TRANSLATED_BY" : "<b>deBurgos</b> (9663917)",
 
    "QUOTE": "There are things about stamina we cannot explain. For everything else, there is <b>Stamin.IA!</b>",
